Fixed small spacing issue in navigation.

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -45,7 +45,9 @@
 		li {
 			&.menu-item-has-children {
 				position: relative;
-				/* Toggle that shows on Mobile Menu when an item has children */
+				@include media('>=tablet'){
+					margin-right: 0.4em;
+				}
 				&:after {
 					@include media('>=tablet'){
 						font-family: 'dashicons';
